[package]
name = "ikc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ikc-webusb = { path = "../ikc-webusb" }
ikc-device = { path = "../ikc-device" }
ikc-common = { path = "../ikc-common" }
coin-bitcoin = { path = "../ikc-wallet/coin-bitcoin" }
wasm-bindgen = { version = "0.2.93", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }  # 启用 "js" 特性
ethereum-types = "=0.14.0"
prost = "=0.11.2"
bytes = "=1.4.0"
prost-types = "=0.11.2"
hex = "=0.4.3"
anyhow = "=1.0.79"
linked-hash-map = { version = "=0.5.6", features = ["serde_impl"] }
serde_json = { version = "=1.0.89", default-features = false, features = ["alloc"] }
base64 = "=0.13.1"
parking_lot = "=0.12.1"
keccak-hash = "=0.10.0"
ssz_rs = "=0.8.0"
ssz_rs_derive = "=0.8.0"
rlp = "=0.5.2"
tiny-bip39 = "=1.0.0"
bitcoin_hashes = "=0.11.0"
uuid = { version = "=1.2.2", features = ["serde", "v4"] }
num-bigint = "=0.4.3"
num-traits = "=0.2.15"
num-integer = "=0.1.45"
byteorder = "=1.4.3"
bech32 = "=0.9.1"
bch_addr = "=0.1.0"
# blake2b-rs = "=0.2.0"//xx
sha2 = "=0.10.6"
digest = "=0.10.6"
hmac = "=0.12.1"
aes = "=0.8.3"
ctr = "=0.9.2"
cbc = "=0.1.2"
pbkdf2 = "=0.11.0"
crypto-mac = "=0.11.1"
forest_vm = "=0.3.2"
# forest_message = "=0.7.2"//xx
forest_address = "=0.3.2"
forest_encoding = "=0.2.2"
forest_cid = "=0.3.0"
# forest_crypto = "0.5.3"//xx
rustc-hex = "=2.1.0"
sp-core = "=7.0.0"
sp-runtime = "=7.0.0"
sp-keyring = "=7.0.0"
blake2b_simd = "=1.0.1"
tiny-keccak = { version = "=2.0.2", features = ["keccak"] }
# prost-build = "=0.11.4"

[lib]
# name="connector"
crate-type=["staticlib","cdylib"]
